# stay-away-web

./: LICENSE
stay-away-backend/: Cargo.toml
stay-away-backend/src/: client.rs  lobby.rs  main.rs
stay-away-backend/src/events/: client.rs  server.rs
stay-away-frontend/: package-lock.json  package.json
stay-away-frontend/src/: App.tsx
stay-away-frontend/src/pages/: Home.tsx  Lobby.tsx
stay-away-frontend/src/stayAwayApi/: clientEvents.ts  events.ts  index.ts  index.tsx  serverEvents.ts
