[package]
name = "stay-away-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
futures-util = "0.3.21"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"